[project]
name = "langgraph-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.0.5",
    "langchain-google-genai>=3.0.2",
    "python-dotenv>=1.2.1",
    "langgraph",
    "langchain-core",
    "langchain-community",
    "groq>=0.33.0",
    "openai>=2.7.2",
]
